--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,6 @@
   <packaging>war</packaging>
 
   <name>rest-application-no-spring Maven Webapp</name>
-  <!-- FIXME change it to the project's website -->
   <url>http://no-spring-app</url>
 
   <properties>
@@ -25,6 +24,13 @@
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
+    </dependency>
+    
+    <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.1.0</version>
     </dependency>
   </dependencies>
 
